--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <meta name="description" content="Mohammad Nasr's terminal portfolio website." />
 
   <!-- Favicons and assets -->
-  <link rel="icon" type="image/png" sizes="96x96" href="./favicon-96x96.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="./public/favicon-96x96.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./public/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./public/favicon-16x16.png" />
   <meta name="msapplication-TileColor" content="#1d2a35" />
   <meta name="theme-color" content="#1d2a35" />
 
